# Calculator

./: CMakeLists.txt
app/: CMakeLists.txt  resources.qrc
app/resources/: zero.avif
app/src/: mainwindow.cpp  mainwindow.h
app/src/buttons/numberButton/: numberbutton.cpp  numberbutton.h
app/src/buttons/operatorButton/: operatorbutton.cpp  operatorbutton.h
app/src/buttons/optionButton/: optionbutton.cpp  optionbutton.h
app/src/centralWidget/: centralwidget.cpp  centralwidget.h
app/src/controller/: calculatorcontroller.cpp  calculatorcontroller.h
app/src/labels/resultLabel/: resultlabel.cpp  resultlabel.h
app/src/labels/stackLabel/: stacklabel.cpp  stacklabel.h
app/src/model/: calculatormodel.cpp  calculatormodel.h  imodel.h
app/src/utils/: utils.h
cmake/: MacOSInfo.plist
